[#2] 폰트추가, 추가 폴더링

--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Base.lproj/Main.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Base.lproj/Main.storyboard
@@ -52,6 +52,7 @@
                 <tabBarController storyboardIdentifier="MainTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="SgR-of-Cmx" customClass="MainTabBarController" customModule="Cardna_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="izb-UU-JpU">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
